# MetaNN

./: CMakeLists.txt
METANN/: CMakeLists.txt  meta_nn.h
METANN/Base/: Array.hpp  Batch.hpp  DataCategory.hpp  Datacopy.hpp  Device.hpp  Duplicate.hpp  Dynamic.hpp  Matrix.hpp  Scalar.hpp  TrivialMatrix.hpp  ZeroMatrix.hpp
METANN/Evaluate/cpu/: trivial_eval_pool.hpp
METANN/Evaluate/facility/: eval_buffer.hpp  eval_group.hpp  eval_handle.hpp  eval_plan.hpp  eval_pool.hpp  eval_unit.hpp
METANN/Facility/: Policy.hpp  VarTypeDict.hpp
METANN/Layers/elementary/: add_layer.hpp  bias_layer.hpp  elementmul_layer.hpp
METANN/Layers/facility/: common_io.hpp  interface_fun.hpp  policies.hpp  traits.hpp
METANN/Memory/: Allocator.hpp  CPUAllocator.cpp  ContinuesMemories.hpp
METANN/NSVarTypeDict/: Policy.hpp  VarTypeDict.hpp
METANN/Operators/: add.hpp  collapse.hpp  operators.hpp  relu.hpp  sigmoid.hpp  transpose.hpp
METANN/Operators/facility/: category_cal.hpp  organizer.hpp  tags.hpp  traits.hpp
METANN/model_rel/param_initializer/: param_initializer.hpp
METANN/model_rel/param_initializer/facility/: policies.hpp  traits.hpp
METANN/policies/: inject_policy.hpp  policy_container.hpp  policy_operations.hpp
test/: CMakeLists.txt  ExampleTest.cpp  SFINAE.cpp  TotalTest.cpp  VarTypeDictTest.cpp
test/data/: CMakeLists.txt  test_array.cpp  test_batch_matrix.cpp
test/facility/: calculate_tags.h
